--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "predeploy": "rm -rf node_modules/.cache/gh-pages && npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
